# nano-geometry

./: CMakeLists.txt
nano/: geometry.h
tests/: main.cpp
